--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,7 +14,11 @@ Proposed Rule}",
 journal={Docket No. FDA- 2013-N-0080},
 year={2013}
 }
-
+ @article{reqVSspec,
+author="{Elisabeth A. Strunk and Carlo A. Furia and Matteo Rossi and John C. Knight and Dino Mandrioli}",
+title="{The Engineering Roles of Requirements and Specification}",
+journal={University of Virginia Technical Report CS-2006-21}
+}
  @article{regar_tech,
 author={Z. Jiang and H. Abbas and PJ. Mosterman and R. Mangharam},
 title="{Tech Report: Abstraction-Tree For Closed-loop Model Checking of Medical Devices}",
