--- a/A.tex
+++ b/A.tex
@@ -39,10 +39,12 @@ FDA such as ``Safety alert - Pacemaker may revert to VVI mode at 70 beats/min if
 
 \section{Challenges to Develop Safe Medical Device Software}
 \subsection{Safe Development Process vs. Safe Product}
-Conformance to the safety standards provides strong confidence on a safe development process. The belief is that a well-planned, systematic engineering process produces more reliable devices, especially if software is a component of the device (\cite{med-book}). However, there is no guarantee that safe process always yield safe devices. Recently there is growing interest on enforcing safety and efficacy evidence for the device itself. \cite{Wassyng} Due to the large variety of medical devices, there does not exist general safety and efficacy requirements that can be written into standard. As the result, evidence for product safety and efficacy varies in quality and organization.
+Conformance to the safety standards provides strong confidence on a safe development process. The belief is that a well-planned, systematic engineering process produces more reliable devices, especially if software is a component of the device (\cite{med-book}). However, there is no guarantee that safe process always yield safe devices. Recently there is growing interest on enforcing safety and efficacy evidence for the device itself. \cite{Wassyng} Due to the large variety of medical devices, there does not exist general safety and efficacy requirements that can be written into standard. As the result, evidence for product safety and efficacy varies in quality and organization. Assurance cases \cite{} have been proposed to help constructing safety arguments and organizing safety evidences. Assurance cases are currently "Recommanded" by FDA during regulation submission. (\cite{})
 
 \subsection{Requirements vs. Specifications}
-The requirements of a system specify \textbf{what} the system should achieve and the specifications of a system specify \textbf{how} the system is designed to satisfy the requriements. The terminology requirements and specifications are confusing in practice and even used interchangeably. \cite{reqVSspec}
+By definition (\cite{}), the requirements of a system specify \textbf{what} the system should achieve and the specifications of a system specify \textbf{how} the system is designed to satisfy the requriements. For example,
+Requirements
+However, the terminology requirements and specifications are confusing in practice and even used interchangeably. \cite{reqVSspec}
 \subsection{Closed-loop vs. Open-loop Evaluation}
 \subsection{Verification vs. Validation vs. Testing}
 \subsection{Domain Expertise}
