--- a/bibliography.bib
+++ b/bibliography.bib
@@ -209,6 +209,12 @@ year={2015}
 	Journal = {Center for Devices and Radiological Health},
 	Title = {{Design Control Guidance For Medical Device Manufacturers}},
 	Year = {1997}}
+	@article{IEC1,
+	Author="{Ken Hall}",
+	Journal="{European Medical Device Technology}",
+	Title="{Developing Medical Device Software to IEC 62304}",
+	year={2010}
+	}
 	
 @article{fda2,
 	Author = {US FDA},
