--- a/A.tex
+++ b/A.tex
@@ -8,22 +8,44 @@
 \end{itemize}
 \begin{figure}[t]
 		\centering
-		\includegraphics[width=0.8\textwidth]{figs/placeholder.png}
+		\includegraphics[width=0.8\textwidth]{figs/devices.png}
 		\caption{\small Figure of current medical devices}
 		\label{fig:Cur}
 \end{figure}
 
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.8\textwidth]{figs/stakeholders.pdf}
+		\caption{\small Figure of current medical devices}
+		\label{fig:Cur}
+\end{figure}
 \section{The Big Problem: Safety Concern Due to Increased Software Complexity}
 Implantable medical devices such as cardiac pacemakers and defibrillators are designed to improve physiological conditions with very little human intervention. 
 Their ability to autonomously affect the physiological state of the patient makes the medical devices safety-critical, and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients. Medical devices increasingly rely on software, and device function and their clinical performance can be affected by seemingly minor changes to software. Software embedded in a medical device, unlike electrical and mechanical components, does not fail due to corrosion, fatigue or have statistical failures of subcomponents. Software failures are uniquely sourced in the design and development of the system. Unlike other industries such as consumer electronics where product life cycles are measured in months, software engineering for medical devices often spans a decade and must prioritize safety and efficacy over time to market. 
-
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.8\textwidth]{figs/recalls.jpg}
+		\caption{\small Figure of current medical devices}
+		\label{fig:Cur}
+\end{figure}
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.8\textwidth]{figs/soft_recalls.jpg}
+		\caption{\small Figure of current medical devices}
+		\label{fig:Cur}
+\end{figure}
   Over the course of the past four decades, cardiac rhythm management devices such as pacemakers and implantable cardioverter defibrillators (ICD) have grown in complexity and now have more than 80,000 to 100,000 lines of code (\cite{pauljones}). According to the US Food and Drug Administration, in 1996, 10\% of all medical device recalls were caused by software-related issues. This rose to 21\% of recalls by 2006 and then to 24\% in 2011 (\cite{medstats}). Most of these recalls are categorized as \emph{Class I}, meaning there is a ``reasonable probability that use of these products will cause serious adverse health consequences or death.'' (\cite{medstats2,pacemakerrecalls,killedbycode}). 
 	
 \section{Regulation Efforts to Ensure Medical Device Safety}
 The United States Food and Drug Administration (FDA) is the primary regulatory authority responsible for assuring the safety, efficacy and security of patients using medical devices. The history of the FDA is a reactionary one, where each stage of evolution was in response to a major healthcare tragedy. 
 
-Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
-
+%Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.8\textwidth]{figs/standards.jpg}
+		\caption{\small Figure of current medical devices}
+		\label{fig:Cur}
+\end{figure}
 \subsection{Pre-market Submission Process}
 According to their potential risks the devices are categorized into 3 classes, Class I, Class II and Class III, corresponding to low-risk, medium-risk and high-risk devices \cite{class}. Life-sustaining devices like implantable pacemakers are classified as Class III and in general are subject to the strictest regulations.
 
