--- a/A.tex
+++ b/A.tex
@@ -1,11 +1,8 @@
 \chapter{Introduction}
 %\section{Grand Challenges For Medical Device Development}
 \section{Integration of Engineering in Life Science}
+There are various classifications of medical devices. FDA classify medical devices into Class I, II, III according to their
 
-\begin{itemize}
-	\item Categories of current medical devices
-	\item Our focus: Medical devices with software-controlled closed-loop therapy
-\end{itemize}
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=0.8\textwidth]{figs/devices.png}
@@ -38,7 +35,12 @@ Their ability to autonomously affect the physiological state of the patient make
 	
 \section{Regulation Efforts to Ensure Medical Device Safety}
 The United States Food and Drug Administration (FDA) is the primary regulatory authority responsible for assuring the safety, efficacy and security of patients using medical devices. The history of the FDA is a reactionary one, where each stage of evolution was in response to a major healthcare tragedy. 
-
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.9\textwidth]{figs/risk.jpg}
+		\caption{\small Figure of current medical devices}
+		\label{fig:Cur}
+\end{figure}
 %Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
 \begin{figure}[t]
 		\centering
