--- a/A.tex
+++ b/A.tex
@@ -9,6 +9,7 @@ There are various classifications of medical devices. FDA classify medical devic
 		\caption{\small Figure of current medical devices}
 		\label{fig:Cur}
 \end{figure}
+We can see that devices may have multiple functions. The ones with both diagnosis and therapy interact with the human body in closed-loop
 
 \begin{figure}[t]
 		\centering
