--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,6 +14,16 @@ Proposed Rule}",
 journal={Docket No. FDA- 2013-N-0080},
 year={2013}
 }
+@article{EU_classify,
+author="{EUROPEAN COMMISSION DG HEALTH AND CONSUMER}",
+title="{MEDICAL DEVICES: Guidance document - Classification of medical devices}",
+journal={GUIDELINES RELATING TO THE APPLICATION OF THE COUNCIL DIRECTIVE 93/42/EEC ON MEDICAL DEVICES},
+year={2010}
+}
+@article{GMDN,
+author="{Global Medical Device Nomenclature (GMDN)}",
+title="{https://www.gmdnagency.org}"
+}
  @article{reqVSspec,
 author="{Elisabeth A. Strunk and Carlo A. Furia and Matteo Rossi and John C. Knight and Dino Mandrioli}",
 title="{The Engineering Roles of Requirements and Specification}",
