--- a/A.tex
+++ b/A.tex
@@ -15,7 +15,7 @@ In general, regulation agencies classify medical devices according to their risk
 		\label{fig:Cur}
 \end{figure}
 
-Among different devices, there are devices with both diagnostic and therapeutic interact with the human body in closed-loop
+Among all kinds of medical devices ranging from tougue depresser, there are devices with both diagnostic and therapeutic functions. These devices diagnose physiological condition of the patient and deliver therapy accordingly, which forms a closed-loop system with the patient. Their ability to autonomously affect the physiological state of the patient makes the medical devices safety-critical, that these devices are usually classified to the highest risk category. and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients.
 
 \section{Stakeholders}
 For each medical device, there are 4 stakeholders: the regulator, the device manufacturer, the medical professional and the patient. All parties have the incentive to ensure the safety and efficacy of the device. With current regulation framework, the evidence for safety 
@@ -27,7 +27,7 @@ For each medical device, there are 4 stakeholders: the regulator, the device man
 \end{figure}
 \section{The Big Problem: Safety Concern Due to Increased Software Complexity}
 Implantable medical devices such as cardiac pacemakers and defibrillators are designed to improve physiological conditions with very little human intervention. 
-Their ability to autonomously affect the physiological state of the patient makes the medical devices safety-critical, and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients. Medical devices increasingly rely on software, and device function and their clinical performance can be affected by seemingly minor changes to software. Software embedded in a medical device, unlike electrical and mechanical components, does not fail due to corrosion, fatigue or have statistical failures of subcomponents. Software failures are uniquely sourced in the design and development of the system. Unlike other industries such as consumer electronics where product life cycles are measured in months, software engineering for medical devices often spans a decade and must prioritize safety and efficacy over time to market. 
+ Medical devices increasingly rely on software, and device function and their clinical performance can be affected by seemingly minor changes to software. Software embedded in a medical device, unlike electrical and mechanical components, does not fail due to corrosion, fatigue or have statistical failures of subcomponents. Software failures are uniquely sourced in the design and development of the system. Unlike other industries such as consumer electronics where product life cycles are measured in months, software engineering for medical devices often spans a decade and must prioritize safety and efficacy over time to market. 
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=0.8\textwidth]{figs/recalls.jpg}
