--- a/A.tex
+++ b/A.tex
@@ -15,8 +15,13 @@ In general, regulation agencies classify medical devices according to their risk
 		\label{fig:Cur}
 \end{figure}
 
-Among all kinds of medical devices ranging from tougue depresser, there are devices with both diagnostic and therapeutic functions. These devices diagnose physiological condition of the patient and deliver therapy accordingly, which forms a closed-loop system with the patient. Their ability to autonomously affect the physiological state of the patient makes the medical devices safety-critical, that these devices are usually classified to the highest risk category. and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients.
-
+Among all the medical devices, there are devices with both diagnostic and therapeutic functions. These devices diagnose physiological condition of the patient and deliver therapy accordingly, which forms a closed-loop system with the patient. Their ability to (semi-) autonomously affect the physiological state of the patient makes the medical devices safety-critical, that these devices are usually classified into the highest risk category. and sufficient evidence for their safety and efficacy should be provided before the devices can be implanted in the patients.
+\begin{figure}[t]
+		\centering
+		\includegraphics[width=0.8\textwidth]{figs/placeholder.png}
+		\caption{\small Closed-loop medical devices}
+		\label{fig:closed-loop}
+\end{figure}
 \section{Stakeholders}
 For each medical device, there are 4 stakeholders: the regulator, the device manufacturer, the medical professional and the patient. All parties have the incentive to ensure the safety and efficacy of the device. With current regulation framework, the evidence for safety 
 \begin{figure}[t]
